# muon_plus

./: .gitignore  LICENSE  README.md  down.sh  leaderboard.csv  plans.md  pyproject.toml  requirements.lock.txt  run.sh  setup.sh  train_gpt_adam_1.py  train_gpt_adam_2.py  train_gpt_muon_1.py  train_gpt_muon_2.py  train_gpt_newton_muon_1.py  train_gpt_newton_muon_2.py  triton_kernels.py
experiments/: 2026-06-29T06-13-28Z-muon1-smoke-e7c3031b.md  2026-06-29T06-16-20Z-muon1-smoke-5d8fcacb.md  2026-06-29T06-27-03Z-muon1-smoke-e830c659.md  2026-06-29T08-04-53Z-muon1-full-e830c659.md  2026-06-29T10-52-18Z-muon1-full-b055ce8e.md  2026-06-29T14-59-07Z-muon1-full-0c5a7ea0.md  2026-06-29T16-29-05Z-newton_muon1-smoke-9c87b12e.md  2026-06-29T23-07-57Z-newton_muon1-full-9c87b12e.md  2026-06-30T03-49-39Z-newton_muon1-full-resume-fix2-46d9db9.md  2026-06-30T03-51-05Z-newton_muon1-full-resume-fix3-46d9db9.md  2026-07-01T03-02-06Z-newton_muon1-full-resume-final-7d5202c.md  2026-07-01T05-57-22Z-newton-preconditioner-runtime-931a579.md  2026-07-01T07-03-55Z-newton-accumulation-runtime-7438521.md  2026-07-01T07-06-31Z-newton-telemetry-gate-7438521.md  2026-07-01T07-16-11Z-trust-newton-muon1-600-7438521.md  2026-07-01T08-58-33Z-fast-idea-sweep-128-04a83d36.md  2026-07-01T09-33-57Z-newton_lite_scale-128-04a83d36.md  2026-07-01T09-43-30Z-fast-variants-300.md  2026-07-01T11-34-40Z-newton_lite_adaptive-900-b03a6791.md  2026-07-02T01-55-45Z-newton_full_adaptive-900-b03a6791.md  2026-07-02T02-12-58Z-newton_full_trust-900-b03a6791.md  2026-07-02T02-58-30Z-lite256_full_trust-300-3fb689d.md  (+17 more)
(+10 files in other folders)
